<?xml version="1.0"?>
<package format="3">
  <name>grid_map_cv</name>
  <version>1.6.2</version>
  <description>Conversions between grid maps and OpenCV images.</description>
  <maintainer email="pfankhauser@anybotics.com">Péter Fankhauser</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/anybotics/grid_map</url>
  <url type="bugtracker">http://github.com/anybotics/grid_map/issues</url>
  <author email="pfankhauser@anybotics.com">Péter Fankhauser</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>grid_map_core</depend>
  <depend>cv_bridge</depend>
  <depend>filters</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- TODO <filters plugin="${prefix}/filter_plugins.xml" /> -->
  </export>
</package>
